argocd/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app.kubernetes.io/name: storeit
    app.kubernetes.io/component: backend
spec:
  selector:
    app.kubernetes.io/name: storeit
    app.kubernetes.io/component: backend
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
